; ModuleID = '/home/carl/AnghaBench/kphp-kdb/text/extr_text-engine.c_http_return.c'
source_filename = "/home/carl/AnghaBench/kphp-kdb/text/extr_text-engine.c_http_return.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.connection = type { i32 }

@no_cache_headers = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [31 x i8] c"text/javascript; charset=UTF-8\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @http_return(%struct.connection* %0, i8* %1, i32 %2) #0 {
  %4 = alloca %struct.connection*, align 8
  %5 = alloca i8*, align 8
  %6 = alloca i32, align 4
  store %struct.connection* %0, %struct.connection** %4, align 8
  store i8* %1, i8** %5, align 8
  store i32 %2, i32* %6, align 4
  %7 = load i32, i32* %6, align 4
  %8 = icmp slt i32 %7, 0
  br i1 %8, label %9, label %12

9:                                                ; preds = %3
  %10 = load i8*, i8** %5, align 8
  %11 = call i32 @strlen(i8* %10)
  store i32 %11, i32* %6, align 4
  br label %12

12:                                               ; preds = %9, %3
  %13 = load %struct.connection*, %struct.connection** %4, align 8
  %14 = load i32, i32* %6, align 4
  %15 = load i32, i32* @no_cache_headers, align 4
  %16 = call i32 @write_basic_http_header(%struct.connection* %13, i32 200, i32 0, i32 %14, i32 %15, i8* getelementptr inbounds ([31 x i8], [31 x i8]* @.str, i64 0, i64 0))
  %17 = load %struct.connection*, %struct.connection** %4, align 8
  %18 = getelementptr inbounds %struct.connection, %struct.connection* %17, i32 0, i32 0
  %19 = load i8*, i8** %5, align 8
  %20 = load i32, i32* %6, align 4
  %21 = call i32 @write_out(i32* %18, i8* %19, i32 %20)
  ret void
}

declare dso_local i32 @strlen(i8*) #1

declare dso_local i32 @write_basic_http_header(%struct.connection*, i32, i32, i32, i32, i8*) #1

declare dso_local i32 @write_out(i32*, i8*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
